Add liquibase, change email token to uuid